# wechat-ai-assistant

./: .gitignore  CLAUDE.md  README.md  index.html  package.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  claude.rs  config.rs  keyboard.rs  main.rs
src/components/: CapturePreview.tsx  RegionSelector.tsx  SettingsPanel.tsx  StatusPanel.tsx
src/styles/: index.css
