[package]
name = "wechat-ai-assistant"
version = "1.0.0"
description = "WeChat AI Assistant with Screen OCR and Keyboard Simulation"
authors = ["Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
screenshots = "0.8"
image = "0.25"
enigo = "0.3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
once_cell = "1.19"
arboard = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
